[package]
name = "axiom-growth"
description = "Growth: a deterministic procedural-planet survival game built as an Axiom app. Implements the worldgen/overworld/simulator requirements audit (docs/growth-port/worldgen_simulator_requirements_audit.md). Apps are composition leaves and are exempt from the branchless and 100%-coverage spine gates, so this is where the game lives until primitives graduate into layers/modules."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
# Only the explicitly-declared `agent` bin exists; this keeps cargo from
# auto-discovering it as an ungated binary the wasm build would try to compile.
autobins = false

# `cdylib` for the wasm browser viewer (the `web` module's `#[wasm_bindgen]`
# entry); `rlib` so the native test suite and the worldgen library API still
# build and link as before.
[lib]
crate-type = ["cdylib", "rlib"]

# The native agent driver: walks the headless `GroundSim` through the reusable
# `axiom-agent-harness`, holding forward until it reaches the mountain summit and
# reporting the player's height each tick. Also serves JSON over HTTP and hosts a
# WebSocket bridge for the live browser. Gated behind `required-features` so the
# default workspace gates and the wasm build never compile it or its deps.
[[bin]]
name = "agent"
path = "src/bin/agent.rs"
required-features = ["agent"]

[features]
# Headless agent driver. Native-only deps, pulled in only when building the agent
# bin — off by default, so coverage/test/clippy/wasm are untouched. The driver
# drives the game entirely through the reusable `axiom-agent-harness` feature
# module (which itself composes `axiom-agent`), so the app never names an
# `axiom-agent` type. Locked by the `agent_climb` test.
agent = [
    "dep:axiom-agent-harness",
    # The reusable, game-agnostic perception model (ray-fan sight, view-cone cull,
    # neutral fact vocabulary). The driver casts its rays against the heightfield
    # by marching the terrain sampler — the SAME module retro FPS casts against its
    # scene — proving perception is agnostic of how the world is represented.
    "dep:axiom-perception",
    # The introspection layer holds the world's semantic tags (the "nouns" the
    # agent resolves a high-level directive against). The driver feeds tags into
    # an `IntrospectApi` and resolves directive targets by name through it.
    "dep:axiom-introspect",
    # Parse the data-driven tag + directive TOML the runner executes.
    "dep:toml",
    "dep:tiny_http",
    "dep:serde",
    "dep:serde_json",
    "dep:tungstenite",
    # Off-screen rendering for the agent's cardinal-direction screenshots: the
    # SAME native GPU backend `tools/axiom-shot` wraps, plus a PNG encoder.
    "dep:axiom-gpu-backend",
    "dep:png",
    # The software Canvas 2D backend (the other `axiom-shot` arm) and the host-layer
    # `FramePacket` it consumes, so the agent can also shoot via canvas2d.
    "dep:axiom-canvas2d-backend",
    "dep:axiom-host",
]

[dependencies]
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-math = { path = "../../crates/axiom-math" }
# The one engine crate an app imports for presentation: App/Window/Mesh/Material/
# Camera/Controller/FirstPersonInput/Renderable/DirectionalLight all arrive
# through the umbrella prelude. Used only by the wasm `web` arm, but a normal dep
# so the crate-type = cdylib library links it; native builds simply never call
# into the wasm-gated `run_web` path.
axiom = { path = "../../modules/axiom" }

# Native agent-driver deps (optional; enabled by the `agent` feature). Confined to
# non-wasm so the browser build never sees them. The reusable agent harness wraps
# axiom-agent; the app drives an agent through that one facade. tiny_http +
# serde(_json) serve the headless HTTP driver; tungstenite hosts the live browser
# bridge.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axiom-agent-harness = { path = "../../modules/axiom-agent-harness", optional = true }
# The reusable, game-agnostic perception model. The growth sense adapter casts its
# ray-fan against the heightfield (marching the terrain sampler), reusing the very
# same module retro FPS casts against its scene. Optional + native.
axiom-perception = { path = "../../modules/axiom-perception", optional = true }
# Layer 06: the agent-interrogable surface that holds the world's semantic tags.
axiom-introspect = { path = "../../crates/axiom-introspect", optional = true }
toml = { version = "0.8", optional = true }
tiny_http = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tungstenite = { version = "0.24", optional = true }
# The engine's native off-screen GPU render path (the same one axiom-shot uses) to
# capture the agent's view, and a PNG encoder to save it. Native + `agent` only.
axiom-gpu-backend = { path = "../../modules/axiom-gpu-backend", features = ["offscreen"], optional = true }
png = { version = "0.17", optional = true }
# The software Canvas 2D backend + the host-layer FramePacket it consumes: the
# agent's other screenshot backend. Native + `agent` only.
axiom-canvas2d-backend = { path = "../../modules/axiom-canvas2d-backend", optional = true }
axiom-host = { path = "../../crates/axiom-host", optional = true }

# Browser entry only: the live presentation loop (axiom-windowing drives our own
# per-tick first-person input each frame, which App::run does not), the
# wasm-bindgen glue, a panic hook, and the DOM the viewer binds to. Confined to
# wasm32, so native `cargo test --workspace` never compiles them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
# The interface layer's keybinding primitive (Keymap/KeyBinding +
# InterfaceInputEvent). The viewer's keyboard listener resolves WASD/arrow
# movement through a shared Keymap. Used only by the wasm `web` arm.
axiom-interface = { path = "../../crates/axiom-interface" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Location",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "console",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
