[package]
name = "axiom-netcode-sim"
description = "Axiom app: an N-peer deterministic-lockstep simulation harness. Spins up N in-process clients (real engine Apps or a lightweight mock), joins them with a seeded modeled network (loss, jitter, duplication, partitions), drives scripted/cheating inputs, and reports how every client converges, lags, and reacts. Because lockstep is deterministic, the in-process run is byte-for-byte what N real browsers would compute."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
axiom = { path = "../../modules/axiom" }
axiom-netcode = { path = "../../modules/axiom-netcode" }
axiom-crypto = { path = "../../crates/axiom-crypto" }
axiom-kernel = { path = "../../crates/axiom-kernel" }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
