[package]
name = "axiom-netplay-browser"
description = "Axiom browser app: live deterministic-lockstep multiplayer. Two browsers each run the engine and control their own cube with the arrow keys; only inputs cross the wire (through a relay), so the two screens stay in sync via determinism. Composes the axiom umbrella, axiom-netcode, and (on wasm) axiom-windowing; the app owns the WebSocket + keyboard edge."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Native + wasm: the engine `App` (with the new player input) and the lockstep
# session. The native build tests the scene + input path; the wasm build adds
# the live loop.
axiom = { path = "../../modules/axiom" }
axiom-netcode = { path = "../../modules/axiom-netcode" }

# The live arm only: the windowing presentation loop and the browser edge
# (WebSocket + keyboard). Confined to wasm32, so native `cargo test`/coverage
# never compile them — the app owns the nondeterministic socket, as netcode's
# design intends.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "EventTarget",
    "Event",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
