[package]
name = "axiom-netplay-browser"
description = "Axiom browser app: live server-authoritative multiplayer. Two browsers each control a cube; the authoritative server (tools/axiom-netplay-server) owns the state and the browsers render its snapshots. The networking is done by the TypeScript @axiom/client SDK in the page; this Rust/wasm crate is the renderer — it builds the scene and draws the latest authoritative positions the page pushes in. Composes the axiom umbrella and (on wasm) axiom-windowing."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Native + wasm: the engine `App` (scene + player nodes + rendering). The native
# build tests the scene + the snapshot→delta render logic; the wasm build adds
# the live presentation loop.
axiom = { path = "../../modules/axiom" }

# The live arm only: the windowing presentation loop. The browser edge — the
# WebSocket, the protocol, and the keyboard — now lives in the page's JavaScript
# via the @axiom/client SDK, so this crate no longer owns a socket. Confined to
# wasm32, so native `cargo test`/coverage never compile it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
