[package]
name = "axiom-netplay-ffi"
description = "Axiom app: a C-ABI shared library (cdylib) that embeds the REAL Axiom engine for an external host (e.g. the .NET netplay server). It builds the netplay scene, applies per-player move intents, ticks the engine headlessly, and exposes the engine's actual rendered frame (per-cube MVP+colour instance floats) across the C boundary. The host owns the socket; this owns the authoritative simulation."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "axiom_netplay_ffi"
# rlib (besides cdylib) so the worker binary and unit tests can reuse the inner
# Session directly.
crate-type = ["cdylib", "rlib"]

# Out-of-process worker: the same Session served over a local socket instead of
# the in-process C ABI; the host spawns one per room for crash isolation.
[[bin]]
name = "axiom-netplay-worker"
path = "src/bin/worker.rs"

[dependencies]
axiom = { path = "../../modules/axiom" }
axiom-net-protocol = { path = "../../modules/axiom-net-protocol" }
axiom-kernel = { path = "../../crates/axiom-kernel" }

[lints.rust]
# FFI boundary requires unsafe (extern "C" + raw pointers), confined to thin
# wrappers over a safe, unit-tested inner Session.
unsafe_code = "allow"
missing_debug_implementations = "warn"
