[package]
name = "axiom-netplay"
description = "Axiom netplay browser demo (standalone, extracted from the merged apps/axiom-gallery crate): live server-authoritative multiplayer. The wasm bundle is the renderer only — networking, prediction, and interpolation live in the page's JavaScript over the @axiom/client SDK."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle; `rlib` so native tests and tooling
# (e.g. the axiom-shot capture harness) can compose the pure core.
[lib]
crate-type = ["cdylib", "rlib"]

# Native + wasm dependencies. The pure game core builds on native (so
# `cargo test` exercises it) and on wasm (the live browser arm).
[dependencies]
# The engine umbrella (module `engine`): App/scene/camera/render authoring.
axiom = { path = "../../modules/axiom" }

# Browser/live arm only: the wasm-bindgen glue, panic hook, the live windowing
# presentation loop, and the debug overlay. Confined to wasm32, so native
# `cargo test` compiles none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-windowing = { path = "../../modules/axiom-windowing" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
