[package]
name = "axiom-proc-playground"
description = "Axiom app: the procedural-generation playground. Proves the space -> entropy -> proc -> proc-validate stack end to end - it builds a tiny deterministic recipe, evaluates it at a content address into a neutral artifact + trace, validates the artifact against generic constraints, and reports the provenance digests. Same (seed, address) => byte-identical artifact, every run. Headless and golden-tested (a composition leaf; exempt from the spine gates, but ships its own determinism tests)."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiom-kernel = { path = "../../crates/axiom-kernel" }
axiom-space = { path = "../../crates/axiom-space" }
axiom-proc = { path = "../../crates/axiom-proc" }
axiom-proc-validate = { path = "../../crates/axiom-proc-validate" }

[lints.rust]
unsafe_code = "forbid"
