[package]
name = "axiom-quintet"
description = "Axiom app: Quintet, a deterministic block-breaking placement game (extracted from the merged apps/axiom-gallery crate). A pure, browser-free game core (10x10 board + guaranteed-placeable pentomino generation over the kernel's deterministic entropy) with a wasm32-only 2D-canvas drag-and-drop shell laid out by the engine's layout solver. Composition leaf: its own wasm bundle + web page."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle; `rlib` so native tests and tooling
# (e.g. the axiom-shot capture harness) can compose the pure core.
[lib]
crate-type = ["cdylib", "rlib"]

# Native + wasm dependencies: the pure game core only. Everything here builds on
# native, so `cargo test -p axiom-quintet` exercises every rule DOM-free.
[dependencies]
# Deterministic primitives: generation seeds the kernel's DeterministicRng from
# (board, score, move-count) via StableHash — no wall clock, no hidden state.
axiom-kernel = { path = "../../crates/axiom-kernel" }
# The proc/space content substrate: the piece generator is a recipe evaluated at
# a space address, so the "next quintet" is durable, addressed content.
axiom-space = { path = "../../crates/axiom-space" }
axiom-proc = { path = "../../crates/axiom-proc" }

# Browser/live arm only: the wasm-bindgen glue, panic hook, the debug overlay,
# and the DOM surface `web.rs` actually touches. The engine-solved on-screen
# placement (board beside/above tray) comes from the host viewport + layout
# solver layers. Confined to wasm32, so native `cargo test` compiles none of it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
axiom-host = { path = "../../crates/axiom-host" }
axiom-layout = { path = "../../crates/axiom-layout" }
axiom-debug-overlay = { path = "../../modules/axiom-debug-overlay" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "MouseEvent",
    "PointerEvent",
    "console",
] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
