[package]
name = "axiom-retro-fps"
description = "Axiom app: standalone browser demo (extracted from the merged apps/axiom-gallery crate). Composition leaf: its own wasm bundle + web page."
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# `cdylib` for the app's own wasm bundle; `rlib` so native tests and tooling
# (e.g. the axiom-shot capture harness) can compose the pure core.
[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
